# example-django-app

./: .env  Dockerfile  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  db.sqlite3
config/settings/components/: __init__.py  common.py  database.py
tasks/: apis.py  models.py  serializers.py
tasks/migrations/: 0001_initial.py
